--- a/preprocessing/대책현황_원자력지진이력_EDA.ipynb
+++ b/preprocessing/대책현황_원자력지진이력_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -148,19 +148,19 @@
        "3     1     0     0     0     0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('C:/Users/mkmy7/OneDrive/바탕 화면/Earthquake_DA\\Earthquake-Korea-DataAnalysis/dataset/최종데이터셋/대책현황/원자력발전소/한국원자력발전소_지진감시이력.csv', encoding='euc-kr')\n",
+    "df = pd.read_csv('C:/geo/Earthquake-Korea-DataAnalysis/dataset/최종데이터셋/대책현황/원자력발전소/한국원자력발전소_지진감시이력.csv', encoding='euc-kr')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "3     1     0     0     0     0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -348,12 +348,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('한국원자력발전소_지진감시이력_EDA.csv', index=False, encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -372,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
