--- a/preprocessing/대책현황_원자력국내발전량.ipynb
+++ b/preprocessing/대책현황_원자력국내발전량.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,19 +141,19 @@
        "[243 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('C:/Users/mkmy7/OneDrive/바탕 화면/Earthquake_DA/Earthquake-Korea-DataAnalysis/dataset/최종데이터셋/대책현황/원자력발전소/국내원자력발전소_발전량.csv')\n",
+    "df = pd.read_csv('C:/geo/Earthquake-Korea-DataAnalysis/dataset/최종데이터셋/대책현황/원자력발전소/국내원자력발전소_발전량.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
